# alldomainsim

./: .gitignore  CLAUDE.md  CLAUDE_ARCHIVE.md  CMakeLists.txt  DEMO_INSTRUCTIONS.md  QUICKSTART.md  README.md  geo_rendezvous_data.json  gravity_turn_data.json  launch_intercept_data.json  launch_orbit_insertion.json  orbit_data.json  rendezvous_data.json  sat_tour_data.json
data/: world_cities_1000.json
data/tles/: gps.txt  telescope_optimizer.py  tle_parser.py
docs/: ARCHITECTURE.md  CONVERSATION_SUMMARY.md  MILESTONE2_SUMMARY.md  STATUS.md
scripts/: build.sh  manual_build.sh  process_cities.py  setup_dependencies.sh
src/: collision_demo.cpp  comparison.cpp  crushed_it_demo.cpp  demo.cpp  distributed_demo.cpp  dogfight_demo.cpp  export_all_sats.cpp  geo_rendezvous_demo.cpp  geo_sim_demo.cpp  gps_pdop_demo.cpp  interplanetary_demo.cpp  launch_intercept_demo.cpp  launch_sweep.cpp  leo_imager_demo.cpp  leo_sensor_revisit.cpp  lunar_return_demo.cpp  main.cpp  mc_engine.cpp  ord_jfk_flight.cpp  perturbation_demo.cpp  rendezvous_demo.cpp  sat_tour_demo.cpp  simple_gravity_turn.cpp
src/coordinate/: CMakeLists.txt  frame_transformer.cpp  frame_transformer.hpp  time_utils.cpp  time_utils.hpp
src/core/: CMakeLists.txt  physics_domain.cpp  physics_domain.hpp  simulation_engine.cpp  simulation_engine.hpp  simulation_mode.hpp  state_vector.cpp  state_vector.hpp
src/data/: CMakeLists.txt  world_cities.cpp  world_cities.hpp
src/debris/: CMakeLists.txt  atmospheric_debris.cpp  atmospheric_debris.hpp  orbital_debris.cpp  orbital_debris.hpp
src/distributed/: CMakeLists.txt  ipc_socket.cpp  ipc_socket.hpp  sim_coordinator.cpp  sim_coordinator.hpp  sim_worker.cpp  sim_worker.hpp  time_barrier.cpp  time_barrier.hpp
src/entities/: CMakeLists.txt  aircraft.cpp  aircraft.hpp  command_module.cpp  command_module.hpp  entity.cpp  entity.hpp  fighter.cpp  fighter.hpp  launch_vehicle.cpp  launch_vehicle.hpp  satellite.cpp  satellite.hpp
src/fom/: CMakeLists.txt  figure_of_merit.hpp  fom.hpp  fom_export.hpp  fom_grid.hpp  gps_pdop.cpp  gps_pdop.hpp  sensor_revisit.cpp  sensor_revisit.hpp
src/io/: CMakeLists.txt  checkpoint.cpp  checkpoint.hpp  json_reader.cpp  json_reader.hpp  json_writer.hpp  tle_parser.cpp  tle_parser.hpp
src/montecarlo/: CMakeLists.txt  a2a_missile.cpp  a2a_missile.hpp  aircraft_configs.hpp  atmosphere.hpp  event_system.cpp  event_system.hpp  flight3dof.cpp  flight3dof.hpp  geo_utils.hpp  intercept_ai.cpp  intercept_ai.hpp  kepler_propagator.hpp  kinetic_kill.cpp  kinetic_kill.hpp  mc_entity.hpp  mc_results.cpp  mc_results.hpp  mc_runner.cpp  mc_runner.hpp  mc_world.cpp  mc_world.hpp  orbital_combat_ai.cpp  orbital_combat_ai.hpp  radar_sensor.cpp  radar_sensor.hpp  replay_writer.cpp  replay_writer.hpp  sam_battery.cpp  sam_battery.hpp  scenario_parser.cpp  scenario_parser.hpp  sim_rng.hpp  waypoint_patrol_ai.cpp  waypoint_patrol_ai.hpp
src/physics/: CMakeLists.txt  aerobraking.cpp  aerobraking.hpp  aerodynamics_6dof.cpp  aerodynamics_6dof.hpp  asteroid_body.hpp  atmosphere_model.cpp  atmosphere_model.hpp  celestial_body.hpp  gravity_assist.cpp  gravity_assist.hpp  gravity_model.cpp  gravity_model.hpp  gravity_utils.hpp  interplanetary_planner.cpp  interplanetary_planner.hpp  launch_trajectory_solver.cpp  launch_trajectory_solver.hpp  low_thrust.cpp  low_thrust.hpp  lunar_ephemeris.cpp  lunar_ephemeris.hpp  maneuver_planner.cpp  maneuver_planner.hpp  mars_atmosphere.cpp  mars_atmosphere.hpp  mission_sequence.cpp  mission_sequence.hpp  multi_body_gravity.cpp  multi_body_gravity.hpp  nbody_gravity.cpp  nbody_gravity.hpp  nonlinear_rendezvous.cpp  nonlinear_rendezvous.hpp  orbital_elements.cpp  orbital_elements.hpp  orbital_perturbations.cpp  orbital_perturbations.hpp  planetary_ephemeris.cpp  planetary_ephemeris.hpp  (+9 more)
src/propagators/: CMakeLists.txt  adaptive_integrator.cpp  adaptive_integrator.hpp  rk4_integrator.cpp  rk4_integrator.hpp
src/tactics/: CMakeLists.txt  missile_guidance.cpp  missile_guidance.hpp  tactical_ai.cpp  tactical_ai.hpp
src/targeting/: CMakeLists.txt  cw_targeting.cpp  cw_targeting.hpp  ric_frame.cpp  ric_frame.hpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
visualization/cesium/: README.md  all_sats.json  all_sats_viewer.html  ballistic_planner.html  cesium_config.js  cities_viewer.html  collision_viewer.html  dogfight_data.json  dogfight_viewer.html  fighter_sim_viewer.html  flight_viewer.html  geo_rendezvous_viewer.html  geo_sim_data.json  geo_sim_initial.json  geo_sim_viewer.html  gps_pdop_viewer.html  iads_viewer.html  index.html  intercept_planner.html  launch_viewer.html  leo_imagers_data.json  leo_imagers_viewer.html  link_budget.html  live_sim_viewer.html  lunar_return_viewer.html  maneuver_planner.html  mc_server.js  model_viewer.html  nuclear_detonation_viewer.html  orbit_data.json  orbit_viewer.html  ord_jfk_flight.json  porkchop_viewer.html  radar_horizon.html  replay_data.json  replay_fighter_patrol.json  replay_gps_coverage.json  replay_h.json  replay_iads.json  replay_multi_domain.json  (+18 more)
visualization/cesium/js/: audio_engine.js  burn_manager.js  comm_engine.js  conjunction.js  cyber_cockpit.js  entity_tooltip.js  ew_system.js  fighter_ai.js  fighter_atmosphere.js  fighter_autopilot.js  fighter_hud.js  fighter_sim_engine.js  fighter_weapons.js  gamepad_input.js  geo_sim_engine.js  iads_comms.js  iads_engine.js  keyboard_help.js  live_sim_engine.js  minimap.js  model_map.js  naval_physics.js  ric_frame.js  settings_panel.js  space_domain_awareness.js  spaceplane_hud.js  spaceplane_orbital.js  spaceplane_planner.js  starfish_prime.js  tactical_datalink.js  van_allen_model.js  visual_effects.js  weather_system.js  window_manager.js
visualization/cesium/models/: f15.glb  shuttle.glb
visualization/cesium/scenarios/: demo_fighter_patrol.json  demo_iads_engagement.json  demo_lax_landing.json  demo_lax_launch.json  demo_multi_domain.json  demo_two_aircraft.json  generate_orbital_arena_100.py  generate_orbital_arena_small.py  gy_model.json  h.json  multi-domain_awareness_model.json  sample_tle.txt  uh_model.json  (+12 more)
(+110 files in other folders)
