# Test directory - unit tests will be added here
# For now, just a placeholder

# Example test structure (uncomment when adding tests):
# add_executable(test_state_vector test_state_vector.cpp)
# target_link_libraries(test_state_vector core)
# add_test(NAME StateVectorTest COMMAND test_state_vector)
